IDs de selects cambiados por clases, en los abms

--- a/html/abmCatedras.html
+++ b/html/abmCatedras.html
@@ -61,7 +61,7 @@
                 <div class="col-md-4">
                     <!-- Seleccion de dias -->
                     <label>Dias</label>
-                    <select id="dia">
+                    <select class="dia">
                         <option value="0">Lunes</option>
                         <option value="1">Martes</option>
                         <option value="2">Miercoles</option>
@@ -73,7 +73,7 @@
                 <div class="col-md-4">
                     <!-- Seleccion de inicio de horario -->
                     <label>Inicio</label>
-                    <select id="hora_inicio">
+                    <select class="hora_inicio">
                         <option value="0">7:00hs</option>
                         <option value="1">8:00hs</option>
                         <option value="2">9:00hs</option>
@@ -95,7 +95,7 @@
                 <div class="col-md-4">
                     <label>Fin</label>
                     <!-- Seleccion de fin de horario -->
-                    <select id="hora_fin">
+                    <select class="hora_fin">
                         <option value="0">7:00hs</option>
                         <option value="1">8:00hs</option>
                         <option value="2">9:00hs</option>
@@ -154,7 +154,7 @@
                 <div class="col-md-4">
                     <!-- Seleccion de dias -->
                     <label>Dias</label>
-                    <select id="dia">
+                    <select class="dia">
                         <option value="0">Lunes</option>
                         <option value="1">Martes</option>
                         <option value="2">Miercoles</option>
@@ -166,7 +166,7 @@
                 <div class="col-md-4">
                     <!-- Seleccion de inicio de horario -->
                     <label>Inicio</label>
-                    <select id="hora_inicio">
+                    <select class="hora_inicio">
                         <option value="0">7:00hs</option>
                         <option value="1">8:00hs</option>
                         <option value="2">9:00hs</option>
@@ -188,7 +188,7 @@
                 <div class="col-md-4">
                     <!-- Seleccion de fin de horario -->
                     <label>Fin</label>
-                    <select id="hora_fin">
+                    <select class="hora_fin">
                         <option value="0">7:00hs</option>
                         <option value="1">8:00hs</option>
                         <option value="2">9:00hs</option>
