--- a/html/abmNotas.html
+++ b/html/abmNotas.html
@@ -64,42 +64,42 @@
                 <div class="col-md-2">
                     <!-- Seleccion de Catedra -->
                     <label>Catedra</label>
-                    <select id="catedra">
+                    <select class="catedra">
                         <option></option>
                     </select>
                 </div>
                 <div class="col-md-2">
                     <!-- Seleccion de Carrera -->
                     <label>Carrera</label>
-                    <select id="carrera">
+                    <select class="carrera">
                         <option></option>
                     </select>
                 </div>
                 <div class="col-md-2">
                     <label>Materia</label>
                     <!-- Seleccion de Materia -->
-                    <select id="materia">
+                    <select class="materia">
                         <option></option>
                     </select>
                 </div>
                 <div class="col-md-2">
                     <label>Horario</label>
                     <!-- Seleccion de Horario -->
-                    <select id="horario">
+                    <select class="horario">
                         <option></option>
                     </select>
                 </div>
                 <div class="col-md-2">
                     <label>Alumno</label>
                     <!-- Seleccion de Alumno -->
-                    <select id="alumno">
+                    <select class="alumno">
                         <option></option>
                     </select>
                 </div>
                 <div class="col-md-2">
                     <label>Nota</label>
                     <!-- Seleccion de Nota -->
-                    <select id="nota">
+                    <select class="nota">
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
@@ -128,35 +128,35 @@
                 <div class="col-md-2">
                     <!-- Seleccion de Catedra -->
                     <label>Catedra</label>
-                    <select id="catedra">
+                    <select class="catedra">
                         <option></option>
                     </select>
                 </div>
                 <div class="col-md-2">
                     <!-- Seleccion de Carrera -->
                     <label>Carrera</label>
-                    <select id="carrera">
+                    <select class="carrera">
                         <option></option>
                     </select>
                 </div>
                 <div class="col-md-2">
                     <label>Materia</label>
                     <!-- Seleccion de Materia -->
-                    <select id="materia">
+                    <select class="materia">
                         <option></option>
                     </select>
                 </div>
                 <div class="col-md-2">
                     <label>Horario</label>
                     <!-- Seleccion de Horario -->
-                    <select id="horario">
+                    <select class="horario">
                         <option></option>
                     </select>
                 </div>
                 <div class="col-md-2">
                     <label>Alumno</label>
                     <!-- Seleccion de Alumno -->
-                    <select id="alumno">
+                    <select class="alumno">
                         <option></option>
                     </select>
                 </div>
@@ -176,42 +176,42 @@
                 <div class="col-md-2">
                     <!-- Seleccion de Catedra -->
                     <label>Catedra</label>
-                    <select id="catedra">
+                    <select class="catedra">
                         <option></option>
                     </select>
                 </div>
                 <div class="col-md-2">
                     <!-- Seleccion de Carrera -->
                     <label>Carrera</label>
-                    <select id="carrera">
+                    <select class="carrera">
                         <option></option>
                     </select>
                 </div>
                 <div class="col-md-2">
                     <label>Materia</label>
                     <!-- Seleccion de Materia -->
-                    <select id="materia">
+                    <select class="materia">
                         <option></option>
                     </select>
                 </div>
                 <div class="col-md-2">
                     <label>Horario</label>
                     <!-- Seleccion de Horario -->
-                    <select id="horario">
+                    <select class="horario">
                         <option></option>
                     </select>
                 </div>
                 <div class="col-md-2">
                     <label>Alumno</label>
                     <!-- Seleccion de Alumno -->
-                    <select id="alumno">
+                    <select class="alumno">
                         <option></option>
                     </select>
                 </div>
                 <div class="col-md-2">
                     <label>Nota</label>
                     <!-- Seleccion de Nota -->
-                    <select id="nota">
+                    <select class="nota">
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
