--- a/html/abmUsuarios.html
+++ b/html/abmUsuarios.html
@@ -58,7 +58,7 @@
                 <div>
                     <!-- Seleccion de Rol -->
                     <label>Rol</label>
-                    <select id="rol">
+                    <select class="rol">
                         <option value="administrador">Administrador</option>
                         <option value="alumno">Alumno</option>
                         <option value="profesor">Profesor</option>
@@ -87,7 +87,7 @@
                 <div>
                     <!-- Seleccion de Documento -->
                     <label>Genero</label>
-                    <select id="genero">
+                    <select class="genero">
                         <option value="masculino">Masculino</option>
                         <option value="femenino">Femenino</option>
                     </select>
@@ -154,7 +154,7 @@
                 <div>
                     <!-- Seleccion de Rol -->
                     <label>Rol</label>
-                    <select id="rol">
+                    <select class="rol">
                         <option value="administrador">Administrador</option>
                         <option value="alumno">Alumno</option>
                         <option value="profesor">Profesor</option>
@@ -183,7 +183,7 @@
                 <div>
                     <!-- Seleccion de Documento -->
                     <label>Genero</label>
-                    <select id="genero">
+                    <select class="genero">
                         <option value="masculino">Masculino</option>
                         <option value="femenino">Femenino</option>
                     </select>
