--- a/html/abmCarreras.html
+++ b/html/abmCarreras.html
@@ -82,7 +82,7 @@
         <div class="col-md-2">
           <!-- Input de Carrera -->
           <label>Nombre de la Carrera</label>
-          <select id="carrera">
+          <select class="carrera">
             <option></option>
           </select>
         </div>
@@ -102,7 +102,7 @@
         <div class="col-md-2">
           <!-- Input de Carrera -->
           <label>Nombre de la Carrera</label>
-          <select id="carrera">
+          <select class="carrera">
             <option></option>
           </select>
         </div>
