Agregado la llamada al register.js.

--- a/html/abmCatedras.html
+++ b/html/abmCatedras.html
@@ -211,6 +211,9 @@
     </div>
     <!-- Botoon para guardar datos -->
     <button id="submit" type="submit">Guardar</button>
+    <script src="../js/register.js">
+        
+    </script>
     <script>
             $(document).ready(function () {
                 jsonCatedras.catedras.forEach(function (element) {
