--- a/html/abmCarreras.html
+++ b/html/abmCarreras.html
@@ -115,6 +115,7 @@
   <!-- Boton para guardar datos -->
   <button id="submit" type="submit">Guardar</button>
   <script src="../js/register.js">
+  <script src="../js/library.js"></script>
     
   </script>
   <!-- Poblar select para modificacion y baja de datos -->
