--- a/html/abmCatedras.html
+++ b/html/abmCatedras.html
@@ -212,6 +212,7 @@
     <!-- Boton para guardar datos -->
     <button id="submit" type="submit">Guardar</button>
     <script src="../js/register.js">
+    <script src="../js/library.js"></script>
         
     </script>
     <script>
