--- a/html/interfazTesting.html
+++ b/html/interfazTesting.html
@@ -4,18 +4,20 @@
         <title>Interfaz Testing Unitario: Universys</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
-        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+            crossorigin="anonymous">
+        <link href="../css/interfazTesting.css" rel="stylesheet">
+        <script src="http://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="container">
             <div class="row">
                  <div class="col-md-4">
                      <ul style="list-style-type: none;">
-                        <li><button type="submit" id="testAbm">TEST ABM</button></li>
-                        <li><button type="submit" id="testRecuperacionContrasena">TEST RECUPERACION CONTRASENA</button></li>
-                        <li><button type="submit" id="testLogin">TEST LOGIN</button></li>
-                        <li><button type="submit" id="testLibrary">TEST LIBRERIA</button></li>
+                        <li><button type="submit" id="testAbm" class="btn btn-default">TEST ABM</button></li>
+                        <li><button type="submit" id="testRecuperacionContrasena" class="btn btn-default">TEST RECUPERACION CONTRASENA</button></li>
+                        <li><button type="submit" id="testLogin" class="btn btn-default">TEST LOGIN</button></li>
+                        <li><button type="submit" id="testLibrary" class="btn btn-default">TEST LIBRERIA</button></li>
                      </ul>
                  </div>
                  <div class="col-md-8">
