bug de login. Redirect not working

--- a/html/login.html
+++ b/html/login.html
@@ -54,7 +54,7 @@
         </div>
         <a href="./reiniciarContrasena.html">Me olvide mi contrase&ntilde;a</a>
         <div>
-          <button type="submit" id="submit" name="submit">Ingresar</button>
+          <button type="submit" onclick="myfunction()">Ingresar</button>
         </div>
       </form>
     </div>
@@ -63,10 +63,14 @@
   <script src="../js/login.js"></script>
   <script src="../js/library.js"></script>
   <script>
-    $(document).ready(function() {
-      var lc = new LoginControllerLocal;
-      $("#submit").click(function() {lc.login("username", "password")});
-    })
+    // $(document).ready(function() {
+    //   console.log("hola");
+    //   window.location = 'perfilAdministrador.html';
+    // });
+    function myfunction() {
+      var lc = new LoginControllerLocal;  
+      lc.login("username", "password");
+    }
   </script>
   <script>
     jQuery.validator.addMethod("passwordCheck",
