probando como cachear la operacion

--- a/html/abmCarreras.html
+++ b/html/abmCarreras.html
@@ -67,9 +67,6 @@
           <input type="text" name="" value="">
         </div>
       </div>
-      <script>
-        var operacion = "alta";
-      </script>
     </div>
   </div>
   <!-- Dar de baja una carrera -->
@@ -87,9 +84,6 @@
           </select>
         </div>
       </div>
-      <script>
-        var operacion = "baja";
-      </script>
     </div>
   </div>
   <!-- Modificar una carrera -->
@@ -107,13 +101,11 @@
           </select>
         </div>
       </div>
-      <script>
-        var operacion = "modificacion";
-      </script>
     </div>
   </div>
   <!-- Boton para guardar datos -->
-  <button id="submit" type="submit">Guardar</button>
+  <input id="operacion" type="text" style="display:none;">
+  <button id="submit" type="button">Guardar</button>
   <script src="../js/register.js"></script>
   <script src="../js/library.js"></script>
     
