--- a/html/abmUsuarios.html
+++ b/html/abmUsuarios.html
@@ -117,6 +117,11 @@
                     <label>Contraseña</label>
                     <input type="password" id="pass">
                 </div>
+                <div>
+                    <!-- Input de Confirmar Contraseña -->
+                    <label>Confirmar Contraseña</label>
+                    <input type="password" id="confirm_pass">
+                </div>
             </div>
             <script>
                 var operacion = "alta";
