--- a/html/abmUsuarios.html
+++ b/html/abmUsuarios.html
@@ -157,6 +157,13 @@
         <div class="container">
             <div class="row">
                 <div>
+                    <div>
+                        <!-- Input de Mail -->
+                        <label>Mail</label>
+                        <select class="mail">
+                            <option></option>
+                        </select>
+                    </div>
                     <!-- Seleccion de Rol -->
                     <label>Rol</label>
                     <select class="rol">
@@ -168,22 +175,22 @@
                 <div>
                     <!-- Input de Nombre -->
                     <label>Nombre</label>
-                    <input type="text" id="nombre">
+                    <input type="text" class="nombre">
                 </div>
                 <div>
                     <!-- Input de Apellido -->
                     <label>Apellido</label>
-                    <input type="text" id="apellido">
+                    <input type="text" class="apellido">
                 </div>
                 <div>
                     <!-- Input de Documento -->
                     <label>Documento</label>
-                    <input type="number" id="documento">
+                    <input type="number" class="documento">
                 </div>
                 <div>
                     <!-- Input de Fecha de Nacimiento -->
                     <label>Fecha de Nacimiento</label>
-                    <input type="date" id="fnac">
+                    <input type="date" class="fnac">
                 </div>
                 <div>
                     <!-- Seleccion de Documento -->
@@ -196,27 +203,22 @@
                 <div>
                     <!-- Input de Domicilio -->
                     <label>Domicilio</label>
-                    <input type="text" id="domicilio">
+                    <input type="text" class="domicilio">
                 </div>
                 <div>
                     <!-- Input de Telefono -->
                     <label>Telefono</label>
-                    <input type="number" id="telefono">
+                    <input type="number" class="telefono">
                 </div>
                 <div>
                     <!-- Input de Matricula -->
                     <label>Matricula</label>
-                    <input type="number" id="matricula">
-                </div>
-                <div>
-                    <!-- Input de Mail -->
-                    <label>Mail</label>
-                    <input type="text" id="mail">
+                    <input type="number" class="matricula">
                 </div>
                 <div>
                     <!-- Input de Contraseña -->
                     <label>Contraseña</label>
-                    <input type="password" id="pass">
+                    <input type="password" class="pass">
                 </div>
             </div>
             <script>
