--- a/html/abmCarreras.html
+++ b/html/abmCarreras.html
@@ -64,7 +64,7 @@
         <div class="col-md-2">
           <!-- Input de Carrera -->
           <label>Nombre de la Carrera</label>
-          <input type="text" name="" value="">
+          <input type="text">
         </div>
       </div>
     </div>
