--- a/html/abmUsuarios.html
+++ b/html/abmUsuarios.html
@@ -67,22 +67,22 @@
                 <div>
                     <!-- Input de Nombre -->
                     <label>Nombre</label>
-                    <input type="text" id="nombre">
+                    <input type="text" class="nombre">
                 </div>
                 <div>
                     <!-- Input de Apellido -->
                     <label>Apellido</label>
-                    <input type="text" id="apellido">
+                    <input type="text" class="apellido">
                 </div>
                 <div>
                     <!-- Input de Documento -->
                     <label>Documento</label>
-                    <input type="number" id="documento">
+                    <input type="number" class="documento">
                 </div>
                 <div>
                     <!-- Input de Fecha de Nacimiento -->
                     <label>Fecha de Nacimiento</label>
-                    <input type="date" id="fnac">
+                    <input type="date" class="fnac">
                 </div>
                 <div>
                     <!-- Seleccion de Documento -->
@@ -95,37 +95,34 @@
                 <div>
                     <!-- Input de Domicilio -->
                     <label>Domicilio</label>
-                    <input type="text" id="domicilio">
+                    <input type="text" class="domicilio">
                 </div>
                 <div>
                     <!-- Input de Telefono -->
                     <label>Telefono</label>
-                    <input type="number" id="telefono">
+                    <input type="number" class="telefono">
                 </div>
                 <div>
                     <!-- Input de Matricula -->
                     <label>Matricula</label>
-                    <input type="number" id="matricula">
+                    <input type="number" class="matricula">
                 </div>
                 <div>
                     <!-- Input de Mail -->
                     <label>Mail</label>
-                    <input type="text" id="mail">
+                    <input type="text" class="mail">
                 </div>
                 <div>
                     <!-- Input de Contraseña -->
                     <label>Contraseña</label>
-                    <input type="password" id="pass">
+                    <input type="password" class="pass">
                 </div>
                 <div>
                     <!-- Input de Confirmar Contraseña -->
                     <label>Confirmar Contraseña</label>
-                    <input type="password" id="confirm_pass">
+                    <input type="password" class="confirm_pass">
                 </div>
             </div>
-            <script>
-                var operacion = "alta";
-            </script>
         </div>
     </div>
     <div class="baja">
@@ -137,17 +134,14 @@
                 <div>
                     <!-- Input de Matricula -->
                     <label>Matricula</label>
-                    <input type="number" id="matricula">
+                    <input type="number" class="matricula">
                 </div>
                 <div>
                     <!-- Input de Mail -->
                     <label>Mail</label>
-                    <input type="text" id="mail">
+                    <input type="text" class="mail">
                 </div>
             </div>
-            <script>
-                var operacion = "baja";
-            </script>
         </div>
     </div>
     <div class="modificacion">
@@ -221,9 +215,6 @@
                     <input type="password" class="pass">
                 </div>
             </div>
-            <script>
-                var operacion = "modificacion";
-            </script>
         </div>
     </div>
     <!-- Boton para guardar datos -->
