Agregado input operacion en los abm

--- a/html/abmNotas.html
+++ b/html/abmNotas.html
@@ -182,6 +182,7 @@
         </div>
     </div>
     <!-- Botoon para guardar datos -->
+    <input id="operacion" type="text" style="display:none;">
     <button id="submit" type="submit">Guardar</button>
     <script src="../js/register.js"></script>
     <script src="../js/library.js"></script>
