--- a/html/abmUsuarios.html
+++ b/html/abmUsuarios.html
@@ -220,6 +220,7 @@
         </div>
     </div>
     <!-- Boton para guardar datos -->
+    <input id="operacion" type="text" style="display:none;">
     <button id="submit" type="submit">Guardar</button>
 
 
