--- a/html/altaAdministrador.html
+++ b/html/altaAdministrador.html
@@ -103,6 +103,7 @@
                     <input class="empty" type="string" name="domicilio" id="domicilio" value="">
                 </div>
                 <br>
+                <input id="operacion" type="text" style="display:none;">
                 <!-- Boton de Submit para guardar los datos -->
                 <button id="submit">Enviar</button>
             </form>
