--- a/html/abmCatedras.html
+++ b/html/abmCatedras.html
@@ -263,6 +263,7 @@
         </div>
     </div>
     <!-- Boton para guardar datos -->
+    <input id="operacion" type="text" style="display:none;">
     <button id="submit" type="submit">Guardar</button>
     <script src="../js/register.js"></script>
     <script src="../js/library.js"></script>
