--- a/html/abmFichadas.html
+++ b/html/abmFichadas.html
@@ -248,6 +248,7 @@
     </div>
   </div>
   <!-- Botoon para guardar datos -->
+  <input id="operacion" type="text" style="display:none;">
   <button id="submit" type="submit">Guardar</button>
   <input style="display: none;" type="text" id="presente">
   <script src="../js/register.js"></script>
