codigo para que funcione el boton logout

--- a/html/abmCarreras.html
+++ b/html/abmCarreras.html
@@ -111,9 +111,10 @@
   <input id="operacion" type="text" style="display:none;">
   <button onclick="myFunction()" type="button">Guardar</button>
   <script src="../js/register.js"></script>
+  <script src="../js/login.js"></script>
   <script src="../js/library.js"></script>
+  <script src="../js/common.js"></script>
   <script>
-      
       function myfunction() {
         var lc = new LoginControllerLocal;  
         lc.login("username", "password");
