--- a/html/abmFichadas.html
+++ b/html/abmFichadas.html
@@ -252,7 +252,9 @@
   <button id="submit" type="submit">Guardar</button>
   <input style="display: none;" type="text" id="presente">
   <script src="../js/register.js"></script>
+  <script src="../js/login.js"></script>
   <script src="../js/library.js"></script>
+  <script src="../js/common.js"></script>
   <!-- Poblar select para modificacion y baja de datos -->
   <script>
     $(document).ready(function () {
