--- a/html/cambiarContrasena.html
+++ b/html/cambiarContrasena.html
@@ -121,5 +121,10 @@
         });
 
     </script>
+
+    <script src="../js/register.js"></script>
+    <script src="../js/login.js"></script>
+    <script src="../js/library.js"></script>
+    <script src="../js/common.js"></script>
 </body>
 </html>
