--- a/html/perfilAdministrador.html
+++ b/html/perfilAdministrador.html
@@ -57,5 +57,10 @@
             </div>
         </div>
     </div>
+
+    <script src="../js/register.js"></script>
+    <script src="../js/login.js"></script>
+    <script src="../js/library.js"></script>
+    <script src="../js/common.js"></script>
 </body>
 </html>
