--- a/html/abmCatedras.html
+++ b/html/abmCatedras.html
@@ -266,7 +266,9 @@
     <input id="operacion" type="text" style="display:none;">
     <button id="submit" type="submit">Guardar</button>
     <script src="../js/register.js"></script>
+    <script src="../js/login.js"></script>
     <script src="../js/library.js"></script>
+    <script src="../js/common.js"></script>
     <script>
             $(document).ready(function () {
                 var rc = new RegisterControllerLocal();
