--- a/html/abmNotas.html
+++ b/html/abmNotas.html
@@ -185,7 +185,9 @@
     <input id="operacion" type="text" style="display:none;">
     <button id="submit" type="submit">Guardar</button>
     <script src="../js/register.js"></script>
+    <script src="../js/login.js"></script>
     <script src="../js/library.js"></script>
+    <script src="../js/common.js"></script>
     
     
     <!-- Poblar select para modificacion y baja de datos -->
