--- a/html/abmUsuarios.html
+++ b/html/abmUsuarios.html
@@ -225,6 +225,9 @@
 
 
     <script src="../js/register.js"></script>
+    <script src="../js/login.js"></script>
+    <script src="../js/library.js"></script>
+    <script src="../js/common.js"></script>
 
 </body>
 </html>
